--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,9 +30,10 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                 role="button" aria-expanded="false">Tags<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">All Tags</a></li>
-                <li><a href="#">tag</a></li>
-                <li><a href="#">Something else here</a></li>
+                <li><a href='#'>All Tags</a></li>
+                <% @tags.each do |tag| %>
+                  <li><a href="#"><%= tag["name"] %></a></li>
+                <% end %>
               </ul>
             </li>
           </ul>
@@ -48,7 +49,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Stash</p>
+            <p>Stash, 2015</p>
           </div>
         </div>
       </footer>
