--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,31 +1,1 @@
-<div class="row">
-  <div class="col-md-3 col-sm-6">
-    <div class="thumbnail">
-      <h4>Some title here</h4>
-      <p>Some copy here</p>
-      <small>somedomain.com</small>
-    </div>
-  </div>
-  <div class="col-md-3 col-sm-6">
-    <div class="thumbnail">
-      <h4>Some title here</h4>
-      <p>Some copy here</p>
-      <small>somedomain.com</small>
-    </div>
-  </div>
-  <div class="col-md-3 col-sm-6">
-    <div class="thumbnail">
-      <h4>Some title here</h4>
-      <p>Some copy here</p>
-      <small>somedomain.com</small>
-    </div>
-  </div>
-  <div class="col-md-3 col-sm-6">
-    <div class="thumbnail">
-      <h4>Some title here</h4>
-      <p>Some copy here</p>
-      <small>somedomain.com</small>
-    </div>
-  </div>
-</div>
-
+<%= react_component('ResourceList', {resources: @resources}) %>
