--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,15 +24,25 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                role="button" aria-expanded="false">Tags<span class="caret"></span></a>
+                                                  role="button" aria-expanded="false"><span class="glyphicon glyphicon-tags" aria-hidden="true">&nbsp;</span><span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <li><a href='#'>All Tags</a></li>
                 <% @tags.each do |tag| %>
                   <li><a href="#"><%= tag["name"] %></a></li>
+                <% end %>
+              </ul>
+            </li>
+          </ul>
+          <!--- Right Navbar toggle off with config var --->
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <% @collections.each do |collection| %>
+                  <li><a href="#"><%= collection["name"] %></a></li>
                 <% end %>
               </ul>
             </li>
