--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,16 +20,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Stash App</a>
+          <a class="navbar-brand" href="/">Stash App</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
+            <li class="active"><a href="/"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a></li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                                                   role="button" aria-expanded="false"><span class="glyphicon glyphicon-tags" aria-hidden="true">&nbsp;</span><span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href='#'>All Tags</a></li>
+                <li><a href='#'>All items</a></li>
+                <li class="divider"></li>
                 <% @tags.each do |tag| %>
                   <li><a href="#"><%= tag["name"] %></a></li>
                 <% end %>
