--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
                 <li><a href='#'>All items</a></li>
                 <li class="divider"></li>
                 <% @tags.each do |tag| %>
-                  <li><a href="#"><%= tag["name"] %></a></li>
+                  <li><a href="/tags/<%= tag['id'] %>/resources"><%= tag["name"] %></a></li>
                 <% end %>
               </ul>
             </li>
@@ -43,7 +43,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-book" aria-hidden="true"></span>&nbsp;<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
                 <% @collections.each do |collection| %>
-                  <li><a href="#"><%= collection["name"] %></a></li>
+                  <li><a href="/collections/<%= collection['id'] %>"><%= collection["name"] %></a></li>
                 <% end %>
               </ul>
             </li>
