--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,1 +1,10 @@
+
+<div style="float:right">
+<button type="button" class="btn btn-default" aria-label="Left Align">
+  <span class="glyphicon glyphicon-th-list" aria-hidden="true"></span>
+</button>
+</div>
+
+<h1>Model Yachting</h1>
+
 <%= react_component('ResourceList') %>
