--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>StashRails</title>
+  <title>Stash: Model Yachting</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
@@ -54,7 +54,7 @@
 
     <div class="container">
       <%= yield %>
-      
+
       <hr>
 
       <footer>
